--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,18 @@ server.port=8080
 # database
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/example?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=nit
-spring.datasource.password=nit1234@
+spring.datasource.url=jdbc:mysql://localhost:3306/blue?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=blue
+spring.datasource.password=SkyBlue@Bin
 
 # mybatis
 mybatis.config=mybatis-config.xml
 mybatis.type-aliases-package: com.example.demo.model
 mybatis.mapper-locations: mybatis/mapper/*.xml
+
+spring.jpa.show-sql = true
+# Entity -> Make Table? (create / none)
+spring.jpa.hibernate.ddl-auto = none
 
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
